<resources>
    <string name="app_name">DataBindingPractice</string>
    <string name="app_introduction">This is a demo for me to practice DataBinding and I hope this demo could help you,too.  \n---- lijiankun24</string>
    <!-- MainActivity begin -->
    <string name="to_layout_activity">Click to LayoutActivity</string>
    <string name="to_observable_activity">Click to ObservableActivity</string>
    <string name="to_rv_activity">Click to RecyclerViewActivity</string>
    <string name="to_viewstub_activity">Click to ViewStubActivity</string>
    <!-- MainActivity end -->

    <!-- LayoutActivity begin -->
    <string name="layout_activity_title">Layout</string>
    <string name="layout_files_details">The following is about Layout: data binding expressions</string>
    <string name="layout_course_name">The name of course is %1$s</string>
    <string name="layout_course_time">The time of course is %1$s</string>
    <string name="layout_course_teacher">The teacher of course is %1$s</string>
    <string name="layout_method_references_title">The following is about Event Handling: method references</string>
    <string name="layout_method_references">Method references: click to show</string>
    <string name="layout_listener_bindings_title">The following is about Event Handling: listener bindings</string>
    <string name="layout_listener_bindings">Listener bindings: click to show</string>
    <string name="layout_include_title">The following is about include in DataBinding</string>
    <string name="layout_include_name">Students name is %s</string>
    <string name="layout_include_age">Students age is %s</string>
    <string name="layout_other_title">The following is other， such as import、res</string>
    <string name="layout_other_import">Import NetworkUtil: Click to show networkinfo</string>
    <string name="layout_other_import1">Import android.view.View: Views visible and gone</string>
    <string name="layout_other_res">Reference the strings res: %1$s and %2$d</string>
    <string name="layout_other_res1">Reference the colors res</string>
    <string name="layout_other_res2">Null 合并运算符</string>
    <!-- LayoutActivity begin -->

    <!-- ObservableActivity begin -->
    <string name="observable_activity_title">Observable</string>

    <string name="observable_observable_fields_title">The following is about ObservableFields</string>
    <string name="observable_fields">ObservableBoolean 类的使用</string>
    <string name="observable_student_mobile">The students mobile is %s</string>
    <string name="observable_input_mobile_hint">Input students mobile, please</string>

    <string name="observable_observable_objects_title">The following is about Observable Objects</string>
    <string name="observable_input_name_hint">Input teachers name, please</string>
    <string name="observable_input_age_hint">Input teachers age, please</string>
    <string name="observable_observable_name">ObservableTeachers name is %1$s</string>
    <string name="observable_observable_age">ObservableTeachers age is %1$s</string>

    <string name="observable_observable_collections_title">The following is about Observable Collections</string>
    <string name="observable_observable_collections_map">ObservableArrayMaps value is %1$s</string>
    <string name="observable_observable_collections_list">ObservableArrayLists value is %1$s</string>
    <!-- ObservableActivity end -->

    <!-- RecyclerViewActivity begin -->
    <string name="recyclerview_activity_title">RecyclerView</string>
    <string name="recyclerview_item_name">The girls name is %1$s</string>
    <string name="recyclerview_item_from">The girls is from %1$s</string>
    <!-- RecyclerViewActivity end -->

    <!-- ViewStubActivity begin -->
    <string name="viewstub_activity_title">ViewStubActivity</string>
    <string name="viewstub">The following is about View Stub</string>
    <string name="viewstub_content">This is TextView from ViewStub</string>
    <string name="viewstub_toast_content">tvViewStubs was clicked</string>
    <!-- ViewStubActivity end -->

    <!-- AboutActivity begin -->
    <string name="about">about</string>
    <string name="about_activity_title">About</string>
    <string name="about_contact_me">Contact Me</string>
    <string name="about_github"><![CDATA[\t Github: <font color=\'#3F51B5\'>%s</font>]]></string>
    <string name="about_weibo"><![CDATA[\t Weibo: <font color=\'#3F51B5\'>%s(lijiankun24)</font>]]></string>
    <string name="about_blog"><![CDATA[\t Blog: <font color=\'#3F51B5\'>%s</font>]]></string>
    <string name="about_mail"><![CDATA[\t Mail: <font color=\'#3F51B5\'>%s</font>]]></string>
    <!-- AboutActivity end -->
</resources>
